# T-Invest-trader

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PROJECT_CONTEXT.md  README.md  SYSTEM_GUARDRAILS.md  SYSTEM_MAP.md  docker-compose.yml  pyproject.toml
.agents/: AGENTS.md  README.md  architect.md  architecture-guardrails.md  codex-operating-loop.md  committer.md  decision.md  delivery.md  enrichment.md  implementer.md  operator.md  outcome-learning.md  planner.md  project-context.md  reviewer.md  shared-context.md  source-ingestion.md  tester.md
.github/: pull_request_template.md
docs/: DASHBOARDS.md  DEPLOYMENT.md
grafana/: alerts.md  queries.sql
skills/: README.md
tests/: conftest.py  test_ai_agreement_snapshot.py  test_ai_divergence.py  test_ai_gating.py  test_alerting.py  test_background_config.py  test_background_runner.py  test_bot_commands.py  test_bot_inline_nav.py  test_broker_event_config.py  test_broker_event_mapper.py  test_broker_event_service.py  test_broker_event_ticker_alignment.py  test_cbr_config.py  test_cbr_parser.py  test_cbr_service.py  test_cli.py  test_cli_instruments.py  test_config.py  test_container.py  test_daily_digest.py  test_execution.py  test_execution_safety.py  test_fetch_policy.py  test_fetch_policy_observability.py  test_fusion_aggregator.py  test_fusion_config.py  test_fusion_service.py  test_global_context.py  test_global_market_data.py  test_grafana_assets.py  test_instrument_alerting.py  test_instrument_enrichment.py  test_instrument_health.py  test_instrument_integration.py  test_instrument_registry.py  (+41 more)
(+120 files in other folders)
