[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tinvest-trader"
version = "0.1.0"
description = "Automated trading system for T-Invest API"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary,pool]>=3.1",
]

[project.optional-dependencies]
telegram = [
    "telethon>=1.36",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["tinvest_trader*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["tinvest_trader"]
